增加 Counter Service
